test: add int tests for PUT team route
